@@ -127,6 +127,8 @@
 	- i18n: copy current production PO files to top-of-stack.
 	- python: include rpmdb module, renamed from bsddb3.
 	- use /etc/rpm/platform (if it exists), rather than uname(2), for arch.
+	- python: portability fiddles (#54350).
+	- check inodes (but not blocks) on FAT file systems (#64256).
 
 4.0.3 -> 4.0.4:
 	- solaris: translate i86pc to i386 (#57182).
